Add API token auth
