# public/docs/openapi.json
@@ -35,6 +35,11 @@
                         }
                     }
                 },
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
                 "servers": [
                     {
                         "url": "/"
@@ -89,6 +94,11 @@
                         }
                     }
                 },
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
                 "servers": [
                     {
                         "url": "/"
@@ -145,6 +155,11 @@
                         }
                     }
                 },
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
                 "servers": [
                     {
                         "url": "/"
@@ -219,6 +234,11 @@
                         }
                     }
                 },
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
                 "servers": [
                     {
                         "url": "/"
@@ -273,6 +293,11 @@
                         }
                     }
                 },
+                "security": [
+                    {
+                        "ApiToken": []
+                    }
+                ],
                 "servers": [
                     {
                         "url": "/"
@@ -413,6 +438,14 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "ApiToken": {
+                "type": "apiKey",
+                "description": "Статический токен доступа из переменной окружения API_TOKEN",
+                "name": "X-API-Token",
+                "in": "header"
             }
         }
     },
